# cargo-fund

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.cargo/: config
.circleci/: config.yml
src/: args.rs  github.rs  main.rs  metadata.rs
tests/: test.rs
tests/bogus-owner/: Cargo.toml
tests/bogus-repo/: Cargo.toml
tests/client-package/: Cargo.toml
tests/funding-test/: Cargo.toml
