[package]
name = "cargo-fund"
description = "Discover funding links for your project's dependencies."
version = "0.2.2"
authors = ["Adam C. Foltzer <acfoltzer@acfoltzer.net>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/acfoltzer/cargo-fund"
readme = "README.md"
categories = ["development-tools::cargo-plugins"]
keywords = ["funding", "sponsorship"]
edition = "2018"

[dependencies]
anyhow = "1.0.28"
cargo_metadata = "0.9.1"
clap = { version = "^3", features = ["derive"] }
envy = "0.4.1"
http = "0.2.1"
lazy_static = "1.4.0"
parking_lot = "^0.12.1"
reqwest = { version = "^0.11", features = ["json"] }
serde = { version = "1.0.51", features = ["derive"] }
serde_json = "1.0.51"
tokio = { version = "^1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.14"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
